# ai_news

./: .gitignore  README.md  main.py  pyproject.toml
config/: cache_conf.py  db_conf.py  setting_conf.py
crud/: favorite.py  history.py  news.py  users.py
frontend/src/store/modules/: favorite.js  history.js
models/: favorite.py  history.py  news.py  users.py
routers/: favorite.py  history.py  news.py  user.py
schemas/: favorite.py  history.py  user.py
utils/: exception.py  response.py  security.py
