[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.136.1",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.46.0",
    "redis>=7.4.0",
]
